fix: fix description of very large catalog
- Fix server description of very large catalog.
- Add rund to build script to run forcing download manager and catalog
selector.